# powexif

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
.github/workflows/: release.yml
examples/: compute_fields.rs  edit_tags.rs  gps_coordinates.rs  read_tags.rs  strip_exif.rs
src/: byte_order.rs  entry.rs  error.rs  exif.rs  format.rs  ifd.rs  interpret.rs  lib.rs  main.rs  makernote.rs  tag.rs  value.rs
