[package]
name = "powexif"
version = "0.0.1"
edition = "2024"
description = "A fast, lightweight, and pure-Rust library and command-line tool designed for parsing, editing, and saving EXIF metadata"
license = "Apache-2.0"
homepage = "https://github.com/phsym/prettytable-rs"
repository = "https://github.com/OhMyDitzzy/powexif"
keywords = ["exif", "image", "metadata", "jpeg", "tiff"]
categories = ["multimedia::images", "parser-implementations", "encoding"]
readme = "README.md"
authors = ["OhMyDitzzy"]

[[bin]]
name = "powexif"
path = "src/main.rs"

[lib]
name = "powexif"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
prettytable-rs = "0.10"
colored = "2"

[dev-dependencies]
tempfile = "3"
